# SUPER-RAG-Multimodal-FastAPI-Docling-LangChain-Qdrant

./: .gitignore  AGENTS.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
api/: routes.py  websocket.py
core/: device.py
core/ingestion/: chunker.py  docling_parser.py  embedder.py  image_captioner.py
core/retrieval/: generator.py  retriever.py
core/vectorstore/: indexer.py  qdrant_client.py
