[project]
name = "superragmultimodal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # API y WebSocket
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",

    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-qdrant>=0.2.0",
    "langchain-community>=0.3.0",

    # Docling para parsing PDF
    "docling>=2.0.0",
    "docling-core>=2.0.0",

    # Qdrant
    "qdrant-client>=1.11.0",

    # Google Gemini
    "google-generativeai>=0.8.0",

    # Image handling
    "Pillow>=10.0.0",

    # Utilidades
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.uv]
python-downloads = "automatic"